Batch Sonar fixes
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/system-apps/system-settings-preferences/webClient/src/app/language/language.component.html
+++ b/system-apps/system-settings-preferences/webClient/src/app/language/language.component.html
@@ -9,7 +9,7 @@
 -->
 <div class="language-main-window">
   <div class="language-content-left">
-      <img class="language-icon" alt=""><hr class="language-separator-hor">
+      <img class="language-icon" alt="Main menu"><hr class="language-separator-hor">
       <button class="language-button" (click)="selectEnglish()" title="{{Select}}">English</button><hr class="language-separator-hor">
       <button class="language-button" (click)="selectChinese()" title="{{Select}}">中文</button><hr class="language-separator-hor">
       <button class="language-button" (click)="selectFrench()" title="{{Select}}">Français</button><hr class="language-separator-hor">
