--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/shared/snackbar/snackbar.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/shared/snackbar/snackbar.component.html
@@ -13,7 +13,7 @@
 <div class="flex">
   <div class="outer-snackbar-container">
       <div class="snackbar-container">
-          <img class="snackbar-icon" src={{data.imgSrc}}>
+          <img class="snackbar-icon" src={{data.imgSrc}} alt="New notification. {{data.title}} {{data.message}}">
           <div class="snackbar-info">
               <div class="snackbar-title">{{data.title}}</div>
               <div class="snackbar-data">{{data.message}}</div>
