--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.html
@@ -14,7 +14,7 @@
       <p class="caption truncate">#{{i}} {{getTitleForWindow(windowId)}}</p>
       </div>
       <div class="instance-snapshot" (click)="clicked(windowId)" [style.background-color]="black">
-        <img class="instance-preview" src={{getPreview(i,launchbarItem)}}/>
+        <img class="instance-preview" src={{getPreview(i,launchbarItem)}} alt="{{i}} {{getTitleForWindow(windowId)}}"/>
       </div>
     </div>
   </div>
