--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
@@ -53,7 +53,7 @@
     <com-rs-mvd-viewport [viewportId]="desktopWindow.viewportId" [attr.rs-com-viewport-id]="desktopWindow.viewportId">
       <!-- Loading display -->
       <div class="full-center">
-        <i class="fa fa-spinner fa-spin fa-3x"></i>
+        <em class="fa fa-spinner fa-spin fa-3x"></em>
       </div>
     </com-rs-mvd-viewport>
   </div>
