--- a/virtual-desktop/src/app/window-manager/simple-window-manager/simple.component.html
+++ b/virtual-desktop/src/app/window-manager/simple-window-manager/simple.component.html
@@ -22,14 +22,14 @@
     <com-rs-mvd-viewport [viewportId]="viewportId">
       <!-- Loading display -->
       <div class="full-center">
-        <i class="fa fa-spinner fa-spin fa-3x"></i>
+        <em class="fa fa-spinner fa-spin fa-3x"></em>
       </div>
     </com-rs-mvd-viewport>
   </rs-com-login>
   <com-rs-mvd-viewport *ngIf="error.length == 0 && !showLogin" [viewportId]="viewportId">
     <!-- Loading display -->
     <div class="full-center">
-      <i class="fa fa-spinner fa-spin fa-3x"></i>
+      <em class="fa fa-spinner fa-spin fa-3x"></em>
     </div>
   </com-rs-mvd-viewport>
 </div>
