More bulk SonarCloud fixes
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/browser-window/browser-window.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/browser-window/browser-window.component.html
@@ -8,7 +8,7 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<iframe *ngIf="url else startPage" [src]="url"></iframe>
+<iframe *ngIf="url else startPage" [src]="url" title="Zowe Web Browser"></iframe>
 <ng-template #startPage>
   <div class="zlux-wb-welcome">
     Welcome to Zowe Web Browser
