--- a/virtual-desktop/src/app/plugin-manager/plugin-factory/iframe/iframe-plugin.component.html
+++ b/virtual-desktop/src/app/plugin-manager/plugin-factory/iframe/iframe-plugin.component.html
@@ -9,7 +9,8 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-  <iframe [id]="iframeId" class="mvd-iframe" frameborder="0" width="100%" height="100%" [src]="startingPage" (mouseover)="iFrameMouseOver($event)"></iframe>
+  <iframe [id]="iframeId" class="mvd-iframe" frameborder="0" width="100%" height="100%" 
+  [src]="startingPage" (mouseover)="iFrameMouseOver($event)" title="Iframe App"></iframe>
 
 <!-- 
   This program and the accompanying materials are
