--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="launch-menu-search">
-      <i class="launch-menu-search-icon fa fa-search"></i>
+      <em class="launch-menu-search-icon fa fa-search"></em>
       <input #searchapp class="launch-menu-search-input" type="text" 
         placeholder="{{translation.translate('Search')}}"
         [style.font-size]="menuText"
