Prototype for color palette
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/color-palette/color-palette.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/color-palette/color-palette.component.html
@@ -32,33 +32,14 @@
 
   <label class="personalization-label">Color</label>
   <div class="personalization-color-1">
-     <!-- <color-circle 
+    <color-circle 
       [color]="selectedColor" 
       (onChangeComplete)="colorSelected($event.color)" 
       [width]="380" 
       [colors]='["#f44336", "#e91e63", "#9c27b0", "#673ab7", "#3f51b5", "#2196f3", 
       "#03a9f4", "#00bcd4", "#009688", "#4caf50", "#8bc34a", "#cddc39", "#ffeb3b", "#ffc107", 
       "#ff9800", "#252628", "#6d7176", "#f3f4f4"]'
-    ></color-circle> -->
-    <canvas #canvas1 width="40" height="40" (click)="clickCanvas(1)"></canvas>
-    <canvas #canvas2 width="40" height="40" (click)="clickCanvas(2)"></canvas>
-    <canvas #canvas3 width="40" height="40" (click)="clickCanvas(3)"></canvas>
-    <canvas #canvas4 width="40" height="40" (click)="clickCanvas(4)"></canvas>
-    <canvas #canvas5 width="40" height="40" (click)="clickCanvas(5)"></canvas>
-    <canvas #canvas6 width="40" height="40" (click)="clickCanvas(6)"></canvas>
-    <canvas #canvas7 width="40" height="40" (click)="clickCanvas(7)"></canvas>
-    <canvas #canvas8 width="40" height="40" (click)="clickCanvas(8)"></canvas>
-    <canvas #canvas9 width="40" height="40" (click)="clickCanvas(9)"></canvas>
-    <br>
-    <canvas #canvas10 width="40" height="40" (click)="clickCanvas(10)"></canvas>
-    <canvas #canvas11 width="40" height="40" (click)="clickCanvas(11)"></canvas>
-    <canvas #canvas12 width="40" height="40" (click)="clickCanvas(12)"></canvas>
-    <canvas #canvas13 width="40" height="40" (click)="clickCanvas(13)"></canvas>
-    <canvas #canvas14 width="40" height="40" (click)="clickCanvas(14)"></canvas>
-    <canvas #canvas15 width="40" height="40" (click)="clickCanvas(15)"></canvas>
-    <canvas #canvas16 width="40" height="40" (click)="clickCanvas(16)"></canvas>
-    <canvas #canvas17 width="40" height="40" (click)="clickCanvas(17)"></canvas>
-    <canvas #canvas18 width="40" height="40" (click)="clickCanvas(18)"></canvas>
+    ></color-circle>
   </div>
   <div class="personalization-color-2">
     <color-slider 
