--- a/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
+++ b/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
@@ -8,79 +8,72 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-<div class="top-title">
-	New Application
-</div>
+
 <div class="create-container">
-	<div class="top-row">
-		<div class="form-container">
-                        <h4 class="item-label">Identifier</h4>
-                        <input ibmText id="identifier" name="identifier" class="input-field"
-                          required  pattern="[A-Za-z1-9.\-_]*"
-                          [(ngModel)]="pluginConfig.identifier" #identifier="ngModel"
-                          placeholder="Identifier e.g. com.your.application">
-			<div *ngIf="identifier.invalid && (identifier.dirty || identifier.touched)">
-                          <ibm-label labelState="error" *ngIf="identifier.errors.required">
-                            Identifier is required.
-                          </ibm-label>
-                          <ibm-label labelState="error" *ngIf="identifier.errors.pattern">
-                            Invalid character: only A-Z, 1-9, ., -, and _ allowed.
-                          </ibm-label>
-                        </div>
-			<h4 class="item-label name">Name</h4>
-			<input ibmText [(ngModel)]="pluginConfig.webContent.launchDefinition.pluginShortNameDefault" placeholder="Application Name" class="input-field">
+  <div class="top-row">
+    <div class="form-container">
+      <ibm-label
+        [invalid]="identifier.invalid"
+        invalidText="Invalid character: only A-Z, 1-9, ., -, and _ allowed.">
+	Identifier
+        <input
+	  ibmText
+          placeholder="Identifier e.g. com.your.application"
+          pattern="[A-Za-z1-9.\-_]*"
+	  [(ngModel)]="pluginConfig.identifier"
+	  #identifier="ngModel">
+      </ibm-label>
 
-			<h4 class="item-label name">Summary</h4>
-			<input ibmText [(ngModel)]="pluginConfig.webContent.descriptionDefault" placeholder="Application Description" class="input-field">
+      <ibm-label>
+	Name
+        <input
+	  ibmText
+	  placeholder="Application Name"
+	  [(ngModel)]="pluginConfig.webContent.launchDefinition.pluginShortNameDefault">
+      </ibm-label>
 
-			<h4 class="item-label framework">Framework</h4>
-			<ibm-dropdown placeholder="Select Framework">
-				<ibm-dropdown-list [items]="frameworkList" (select)="frameworkSelect($event)"></ibm-dropdown-list>
-			</ibm-dropdown>
+      <ibm-label>
+	Description
+        <input
+          ibmText
+          placeholder="Application Description"
+          [(ngModel)]="pluginConfig.webContent.descriptionDefault">
+      </ibm-label>
 
-	    <h4 class="item-label framework">Templates</h4>
-		  <div class="template-waring" *ngIf="this.currentFramework === 'Choose a framework'">
-			  Choose a framework and select your template.
-		  </div>
-		  <ibm-dropdown placeholder="Select Template">
-			  <ibm-dropdown-list [items]="templateList" (select)="templateSelect($event)"></ibm-dropdown-list>
-		  </ibm-dropdown>
-      
-			<h4 class="item-label name optional">License</h4>
-			<input ibmText [(ngModel)]="pluginConfig.license" placeholder="License Name" class="input-field">
-
-			<h4 class="item-label name optional">Author</h4>
-			<input ibmText [(ngModel)]="pluginConfig.author" placeholder="Author" class="input-field">
-
-			<h4 class="item-label name optional">Author Homepage</h4>
-			<input ibmText [(ngModel)]="pluginConfig.homepage" placeholder="Author Homepage" class="input-field">
-		</div>
-
-    <div class="module-container">
-      <!--
-      <h4 class="item-label">Icon</h4>
-      <app-file-uploader
-			  [description]="'Only png files, at least 64x64 size. 1MB max file size.'"
-			  [accept]="['.png']"
-			  [multiple]="false"
-        [(files)]="files"
-        [size]="1000000"
-			  [buttonText]="'Upload'">
-		  </app-file-uploader>
-      -->
-      <h4 class="item-label">Preview</h4>
-			<textarea
-				ibmTextArea
-				[disabled]="true"
-				[theme]="'light'"
-				[rows]="25"
-				[cols]="40">{{pluginText}}</textarea>
+      <ibm-label>Framework</ibm-label>
+      <ibm-tile-group (selected)="frameworkSelect($event)" [multiple]="false" required>
+        <ibm-selection-tile
+	  *ngFor="let framework of frameworks"
+	  value="{{framework | lowercase}}">
+	  {{framework}}
+	</ibm-selection-tile>
+      </ibm-tile-group>
     </div>
-	</div>
+    
+    <div class="module-container">
+      <ibm-label>Preview
+        <textarea
+          ibmTextArea
+          [disabled]="true"
+          theme="light"
+          [rows]="25"
+          [cols]="40"
+          aria-label="preview">{{pluginText}}</textarea>
+      </ibm-label>
+    </div>
+  </div>
 
-	<div class="control-container">
-		<button ibmButton [disabled]="!pluginConfig.identifier || !pluginConfig.webContent.descriptionDefault || !pluginConfig.webContent.launchDefinition.pluginShortNameDefault || !pluginConfig.webContent.framework || !pluginConfig.template" (click)="generateApp()">Create</button>
-	</div>
+  <div class="control-container">
+    <button
+      ibmButton
+      [disabled]="!pluginConfig.identifier
+	|| !pluginConfig.webContent.descriptionDefault
+        || !pluginConfig.webContent.launchDefinition.pluginShortNameDefault
+	|| !pluginConfig.webContent.framework"
+      (click)="generateApp()">
+      Create
+    </button>
+  </div>
 </div>
 
 <!-- 
