--- a/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
+++ b/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
@@ -8,6 +8,10 @@
   
   Copyright Contributors to the Zowe Project.
 -->
+<div class="top-title">
+  New Application
+</div>
+
 <div class="create-container">
   <div class="top-row">
     <div class="form-container">
