--- a/system-apps/app-generator/webClient/src/app/pages/create/create.component.scss
+++ b/system-apps/app-generator/webClient/src/app/pages/create/create.component.scss
@@ -1,3 +1,14 @@
+.top-title {
+	font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
+	font-size: 1rem;
+	text-decoration: none;
+	font-weight: 600;
+	letter-spacing: 0.1px;
+	line-height: 50px;
+	padding-left: 20px;
+	height: 50px;
+}
+
 .create-container {
 	padding: 10px;
 
