--- a/system-apps/app-generator/webClient/src/app/pages/create/create.component.scss
+++ b/system-apps/app-generator/webClient/src/app/pages/create/create.component.scss
@@ -19,7 +19,7 @@
 
 		.form-container {
 			padding: 10px;
-			flex-basis: 30%;
+			flex-basis: 50%;
 
 			.item-label {
 				margin-top: 0.5rem;
@@ -28,6 +28,18 @@
 			.tile-group {
 				display: flex;
 				flex-direction: row;
+				font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
+				font-size: .875rem;
+				font-weight: 400;
+				line-height: 1.125rem;
+				letter-spacing: .16px;
+
+				.tile-header {
+					font-weight: 600;
+				}
+				.tile-body {
+					font-size: 0.75rem;
+				}
 			}
 		}
 
