Added version field

--- a/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
+++ b/system-apps/app-generator/webClient/src/app/pages/create/create.component.html
@@ -84,6 +84,15 @@
 
       <ibm-label
         class="item-label">
+        Version
+        <input
+          ibmText
+          placeholder="Plugin Version"
+          [(ngModel)]="pluginConfig.pluginVersion">
+      </ibm-label>
+
+      <ibm-label
+        class="item-label">
         Author
         <input
           ibmText
